--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,22 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "app.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "app.js"
-      }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "app.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "app.js"
+    },
+    {
+      "src": "/swaggerAi/(.*)",
+      "dest": "/swaggerAi/$1"
+    }
+  ],
+  "static": {
+    "directory": "swaggerAi"
   }
+}
