--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.637.0",
+    "@paypal/checkout-server-sdk": "^1.0.3",
     "aws-sdk": "^2.1686.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -28,7 +29,8 @@
     "multer-s3": "^3.0.1",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "twilio": "^5.3.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
