--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase-admin": "^12.6.0",
     "formidable": "^3.5.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
@@ -30,7 +31,8 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "swagger-ui-express": "^5.0.1",
-    "twilio": "^5.3.3"
+    "twilio": "^5.3.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
