sent in app notification

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "firebase-admin": "^12.6.0",
     "formidable": "^3.5.1",
+    "googleapis": "^144.0.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
